changes to support determining match recency and whether it was viewed
